--- a/app/src/main/res/layout/nav_header_home_page.xml
+++ b/app/src/main/res/layout/nav_header_home_page.xml
@@ -30,6 +30,7 @@
         android:id="@+id/HomePage_Email_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="android.studio@android.com" />
 
 </LinearLayout>
