--- a/app/src/main/res/menu/home_page.xml
+++ b/app/src/main/res/menu/home_page.xml
@@ -4,12 +4,18 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Help" />
     <item
         android:id="@+id/action_refresh"
-        android:icon="@drawable/refresh"
+        android:icon="@drawable/reload"
         android:orderInCategory="100"
-        android:title="Refresh" />
+        android:title="Refresh"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/search"
+        android:orderInCategory="100"
+        android:title="Search"
+        app:showAsAction="always" />
 
 </menu>
